--- a/Instructions/temp_analysis_bonus_2_starter.ipynb
+++ b/Instructions/temp_analysis_bonus_2_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,20 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['measurement', 'station']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# reflect an existing database into a new model\n",
     "Base = automap_base()\n",
@@ -79,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +77,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +127,7 @@
        "  'primary_key': 0}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +183,7 @@
        "  'primary_key': 0}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +285,7 @@
        "Text(0, 0.5, 'Temperature(F)')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -337,96 +326,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1,\n",
-       "  'USC00519397',\n",
-       "  0.08,\n",
-       "  '2010-01-01',\n",
-       "  1,\n",
-       "  'WAIKIKI 717.2, HI US',\n",
-       "  21.2716,\n",
-       "  -157.8168,\n",
-       "  3.0),\n",
-       " (2,\n",
-       "  'USC00519397',\n",
-       "  0.0,\n",
-       "  '2010-01-02',\n",
-       "  2,\n",
-       "  'KANEOHE 838.1, HI US',\n",
-       "  21.4234,\n",
-       "  -157.8015,\n",
-       "  14.6),\n",
-       " (3,\n",
-       "  'USC00519397',\n",
-       "  0.0,\n",
-       "  '2010-01-03',\n",
-       "  3,\n",
-       "  'KUALOA RANCH HEADQUARTERS 886.9, HI US',\n",
-       "  21.5213,\n",
-       "  -157.8374,\n",
-       "  7.0),\n",
-       " (4,\n",
-       "  'USC00519397',\n",
-       "  0.0,\n",
-       "  '2010-01-04',\n",
-       "  4,\n",
-       "  'PEARL CITY, HI US',\n",
-       "  21.3934,\n",
-       "  -157.9751,\n",
-       "  11.9),\n",
-       " (5,\n",
-       "  'USC00519397',\n",
-       "  None,\n",
-       "  '2010-01-06',\n",
-       "  5,\n",
-       "  'UPPER WAHIAWA 874.3, HI US',\n",
-       "  21.4992,\n",
-       "  -158.0111,\n",
-       "  306.6),\n",
-       " (6,\n",
-       "  'USC00519397',\n",
-       "  0.06,\n",
-       "  '2010-01-07',\n",
-       "  6,\n",
-       "  'WAIMANALO EXPERIMENTAL FARM, HI US',\n",
-       "  21.33556,\n",
-       "  -157.71139,\n",
-       "  19.5),\n",
-       " (7,\n",
-       "  'USC00519397',\n",
-       "  0.0,\n",
-       "  '2010-01-08',\n",
-       "  7,\n",
-       "  'WAIHEE 837.5, HI US',\n",
-       "  21.45167,\n",
-       "  -157.84888999999998,\n",
-       "  32.9),\n",
-       " (8,\n",
-       "  'USC00519397',\n",
-       "  0.0,\n",
-       "  '2010-01-09',\n",
-       "  8,\n",
-       "  'HONOLULU OBSERVATORY 702.2, HI US',\n",
-       "  21.3152,\n",
-       "  -157.9992,\n",
-       "  0.9),\n",
-       " (9,\n",
-       "  'USC00519397',\n",
-       "  0.0,\n",
-       "  '2010-01-10',\n",
-       "  9,\n",
+       "[('USC00516128',\n",
        "  'MANOA LYON ARBO 785.2, HI US',\n",
        "  21.3331,\n",
        "  -157.8025,\n",
-       "  152.4)]"
+       "  152.4,\n",
+       "  135.17000000000004),\n",
+       " ('USC00519281',\n",
+       "  'WAIHEE 837.5, HI US',\n",
+       "  21.45167,\n",
+       "  -157.84888999999998,\n",
+       "  32.9,\n",
+       "  65.44000000000003),\n",
+       " ('USC00513117',\n",
+       "  'KANEOHE 838.1, HI US',\n",
+       "  21.4234,\n",
+       "  -157.8015,\n",
+       "  14.6,\n",
+       "  40.30000000000001),\n",
+       " ('USC00519523',\n",
+       "  'WAIMANALO EXPERIMENTAL FARM, HI US',\n",
+       "  21.33556,\n",
+       "  -157.71139,\n",
+       "  19.5,\n",
+       "  34.25000000000001),\n",
+       " ('USC00518838',\n",
+       "  'UPPER WAHIAWA 874.3, HI US',\n",
+       "  21.4992,\n",
+       "  -158.0111,\n",
+       "  306.6,\n",
+       "  32.930000000000014),\n",
+       " ('USC00514830',\n",
+       "  'KUALOA RANCH HEADQUARTERS 886.9, HI US',\n",
+       "  21.5213,\n",
+       "  -157.8374,\n",
+       "  7.0,\n",
+       "  25.759999999999984),\n",
+       " ('USC00511918',\n",
+       "  'HONOLULU OBSERVATORY 702.2, HI US',\n",
+       "  21.3152,\n",
+       "  -157.9992,\n",
+       "  0.9,\n",
+       "  21.27999999999999),\n",
+       " ('USC00519397', 'WAIKIKI 717.2, HI US', 21.2716, -157.8168, 3.0, 9.78),\n",
+       " ('USC00517948', 'PEARL CITY, HI US', 21.3934, -157.9751, 11.9, 5.24)]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,8 +387,13 @@
     "# Calculate the total amount of rainfall per weather station for your trip dates using the previous year's \n",
     "# matching dates.\n",
     "# Sort this in descending order by precipitation amount and list the station, name, latitude, longitude, and elevation\n",
-    "sel = [Measurement.id, Measurement.station, Measurement.prcp, Measurement.date, Station.id, Station.name, Station.latitude, Station.longitude, Station.elevation]\n",
-    "all_data = session.query(*sel).filter(Measurement.id == Station.id).all()\n",
+    "sel = [Station.station, Station.name, Station.latitude, Station.longitude, Station.elevation, func.sum(Measurement.prcp)]\n",
+    "start_date = '2010-01-01'\n",
+    "end_date = '2010-12-31'\n",
+    "all_data = session.query(*sel).filter(Measurement.station == Station.station).\\\n",
+    "    filter(Measurement.date > start_date).\\\n",
+    "    filter(Measurement.date < end_date).\\\n",
+    "    group_by(Station.name).order_by(func.sum(Measurement.prcp).desc()).all()\n",
     "all_data\n",
     "\n"
    ]
