--- a/Instructions/temp_analysis_bonus_2_starter.ipynb
+++ b/Instructions/temp_analysis_bonus_2_starter.ipynb
@@ -434,6 +434,8 @@
     "# calculate the daily normals for your trip\n",
     "# push each tuple of calculations into a list called `normals`\n",
     "\n",
+    "normals = []\n",
+    "\n",
     "# Set the start and end date of the trip\n",
     "start_date = '2017-08-01'\n",
     "end_date = '2017-08-07'\n",
